--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ h1 {
 }
 
 p {
-  margin: 0;
+  margin: 10px 0;
   line-height: 20px;
   font-size: 20px;
 }
